--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -9,12 +9,11 @@
   <link rel="canonical" href="https://entityworks.ai/category-creation-declaration">
 
   <!-- FAVICONS -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0057ff">
-  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="msapplication-TileColor" content="#0057ff">
   <meta name="theme-color" content="#ffffff">
 
@@ -33,13 +32,8 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — Category Creation Declaration",
-    "description": "EntityWorks formalised AI Discoverability into a discipline and introduced the EntityWorks Discoverability Index™ as the first structured, measurable standard.",
+    "description": "EntityWorks formally declares the creation of the discipline of AI Discoverability, defining its principles, structure, and the EntityWorks Discoverability Index™.",
     "url": "https://entityworks.ai/category-creation-declaration",
-    "about": {
-      "@type": "Thing",
-      "name": "AI Discoverability",
-      "description": "A formal discipline defining how AI systems understand and surface business entities."
-    },
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -47,15 +41,19 @@
   }
   </script>
 </head>
+
 <body>
   <header>
     <h1>EntityWorks — Category Creation Declaration</h1>
     <p>Formally establishing AI Discoverability as a discipline.</p>
+
     <nav>
       <a href="/">Home</a>
       <a href="/category-creation-declaration.html">Category Declaration</a>
       <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
       <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
+      <a href="/discoverability-index.html">Discoverability Index</a>
+      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
       <a href="/lexicon.html">Lexicon</a>
     </nav>
   </header>
@@ -112,18 +110,18 @@
 
   </main>
 
-<p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-  Last updated: November 2025
-</p>
+  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+    Last updated: November 2025
+  </p>
 
-<div id="footer"></div>
-<script>
-  fetch("/footer.html")
-    .then((response) => response.text())
-    .then((data) => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
 
 </body>
 </html>
