--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,24 @@
-<footer style="margin-top: 2rem; padding-top: 1rem; border-top: 1px solid #e0e0e0; font-size: 0.9rem; color: #666;">
-  <p>&copy; EntityWorks. All rights reserved.</p>
+<footer style="margin-top: 3rem; padding-top: 1rem; border-top: 1px solid #ddd; font-size: 0.85rem; color: #777; line-height: 1.5;">
+
+  <p><strong>EntityWorks Ltd</strong></p>
   <p>
-    <a href="/privacy.html">Privacy</a> |
+    Company No: 16849701<br>
+    82a James Carter Road, Mildenhall, Bury St. Edmunds,<br>
+    England, IP28 7DE<br>
+    Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+  </p>
+
+  <p style="margin-top: 1.5rem;">
+    <a href="/privacy.html" style="margin-right: 1rem;">Privacy</a>
     <a href="/legal.html">Legal</a>
   </p>
+
+  <p style="margin-top: 1.5rem; color: #aaa;">
+    EntityWorks does not use cookies, analytics tools, or tracking technologies.
+  </p>
+
+  <p style="margin-top: 1rem; color: #aaa;">
+    © EntityWorks Ltd. All rights reserved.
+  </p>
+
 </footer>
