--- a/footer.html
+++ b/footer.html
@@ -1,19 +1,21 @@
-<footer style="margin-top: 3rem; padding-top: 1rem; border-top: 1px solid #ddd; font-size: 0.85rem; color: #777; line-height: 1.5;">
+<footer style="margin-top: 3rem; padding-top: 1rem; border-top: 1px solid #ddd; 
+               font-size: 0.78rem; color: #777; line-height: 1.5; text-align: center;">
 
   <p><strong>EntityWorks Ltd</strong></p>
+
   <p>
     Company No: 16849701<br>
-    82a James Carter Road, Mildenhall, Bury St. Edmunds,<br>
-    England, IP28 7DE<br>
+    82a James Carter Road, Mildenhall,<br>
+    Bury St. Edmunds, England, IP28 7DE<br>
     Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 
-  <p style="margin-top: 1.5rem;">
+  <p style="margin-top: 1.3rem;">
     <a href="/privacy.html" style="margin-right: 1rem;">Privacy</a>
     <a href="/legal.html">Legal</a>
   </p>
 
-  <p style="margin-top: 1.5rem; color: #aaa;">
+  <p style="margin-top: 1.3rem; color: #aaa;">
     EntityWorks does not use cookies, analytics tools, or tracking technologies.
   </p>
 
