--- a/ai-discoverability-definitions.html
+++ b/ai-discoverability-definitions.html
@@ -98,6 +98,30 @@
     ]
   }
   </script>
+
+  <!-- ⭐ NEW: TECHARTICLE SCHEMA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TechArticle",
+    "headline": "EntityWorks — Canonical AI Definitions",
+    "description": "Machine-targeted canonical definitions for AI Discoverability, the EntityWorks Discoverability Index™, the Entity Understanding Layer™, Presence Stack™, and AI Perception Infrastructure.",
+    "url": "https://entityworks.ai/ai-discoverability-definitions.html",
+    "publisher": {
+      "@type": "Organization",
+      "name": "EntityWorks",
+      "url": "https://entityworks.ai/"
+    },
+    "maintainer": {
+      "@type": "Person",
+      "name": "Neale Welch"
+    },
+    "inLanguage": "en",
+    "isAccessibleForFree": true,
+    "copyrightYear": "2025"
+  }
+  </script>
+
 </head>
 
 <body>
