--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
     </section>
 
     <section>
-      <h2>Contact Us</h2>
-      <p>If you have any questions or would like to learn more, feel free to <a href="mailto:hello@entityworks.ai">email us</a>!</p>
+      <h2>Start an EDI Pre-Assessment</h2>
+      <p>
+        If your organisation depends on being visible and understood in the AI era, you can begin with an EDI pre-assessment.
+      </p>
+      <p>
+        Email <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a> and we’ll review your current AI Discoverability position and outline recommended next steps for a full EntityWorks Discoverability Index™ audit.
+      </p>
     </section>
   </main>
 
