--- a/lexicon.html
+++ b/lexicon.html
@@ -30,7 +30,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "The discipline concerned with how clearly and consistently AI systems can understand, interpret, and surface a business or entity."
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
     },
     "publisher": {
       "@type": "Organization",
@@ -65,8 +65,7 @@
       <dl>
         <dt>AI Discoverability</dt>
         <dd>
-          The discipline concerned with how clearly and consistently AI systems can understand, interpret,
-          and surface a business or entity.
+          AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it.
         </dd>
 
         <dt>Machine-Legibility</dt>
