--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -33,7 +33,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "A formal discipline focused on how AI systems understand and surface business entities."
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
     },
     "publisher": {
       "@type": "Organization",
@@ -63,8 +63,7 @@
     <section>
       <h2>What Is AI Discoverability?</h2>
       <p>
-        <strong>AI Discoverability</strong> is the discipline of ensuring that a business or entity is clearly understood,
-        consistently represented, and reliably surfaced by modern AI systems.
+        <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it.
       </p>
       <p>
         It focuses on how models interpret entities — not just how humans search. That includes structure, consistency,
