--- a/position-on-ai-discoverability.html
+++ b/position-on-ai-discoverability.html
@@ -29,7 +29,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "A discipline concerned with how AI systems interpret and surface business entities."
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
     },
     "publisher": {
       "@type": "Organization",
