--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>EntityWorks — AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <meta name="description" content="EntityWorks formalises AI Discoverability into a discipline with the EntityWorks Discoverability Index™.">
+  <meta name="description" content="EntityWorks develops the frameworks, language, and standards behind AI Discoverability, including the EntityWorks Discoverability Index™, helping organisations navigate visibility in the AI era.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -28,8 +28,13 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — AI Discoverability",
-    "description": "EntityWorks formalises AI Discoverability into a discipline with the EntityWorks Discoverability Index™.",
+    "description": "EntityWorks develops the frameworks, language, and standards behind AI Discoverability, including the EntityWorks Discoverability Index™, helping organisations navigate visibility in the AI era.",
     "url": "https://entityworks.ai/",
+    "about": {
+      "@type": "Thing",
+      "name": "AI Discoverability",
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
+    },
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -56,7 +61,7 @@
 
   <main>
 
-    <!-- NEW INTRO SECTION (approved text) -->
+    <!-- INTRO SECTION WITH APPROVED COPY -->
     <section>
       <h2>What is AI Discoverability?</h2>
 
@@ -91,7 +96,6 @@
       </div>
     </section>
 
-    <!-- REMAINING SECTIONS UNCHANGED -->
     <section>
       <h2>Explore Our Work</h2>
       <p>Learn more about our role in formalising AI Discoverability:</p>
