--- a/ai-perception.html
+++ b/ai-perception.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="A placeholder for EntityWorks’ upcoming work on AI Perception — the broader discipline that explains how AI systems interpret and represent organisations.">
+        content="A placeholder for EntityWorks’ upcoming work on AI Perception — the broader discipline that explains how AI systems form, update, and express their understanding of people, organisations, and ideas.">
   <link rel="canonical" href="https://entityworks.ai/ai-perception.html">
 
   <style>
@@ -31,7 +31,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Perception",
-      "description": "AI Perception refers to how AI systems form, structure, update, and represent their internal understanding of organisations, concepts, and entities."
+      "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, and ideas."
     },
     "publisher": {
       "@type": "Organization",
@@ -44,18 +44,23 @@
 <body>
   <header>
     <h1>AI Perception</h1>
-    <p>The broader discipline that explains how AI systems interpret and represent organisations.</p>
+    <p>The broader discipline that explains how AI systems interpret and represent the world.</p>
   </header>
 
   <main>
     <div class="placeholder">
       <p>
-        This page will become the central hub for EntityWorks’ work on <strong>AI Perception</strong> — the
-        overarching discipline that sits above AI Discoverability. It introduces the principles, models, and
-        frameworks that describe how AI systems build and update their internal representations of entities.
+        <strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their
+        understanding of people, organisations, and ideas.
       </p>
       <p>
-        Full publications will be added as the discipline is developed and formalised.
+        This page will become the central hub for EntityWorks’ work on AI Perception — the overarching discipline that
+        sits above AI Discoverability. It will introduce the principles, models, and frameworks that describe how AI
+        systems build and update their internal representations, and how that perception shapes what people see in
+        AI-generated answers.
+      </p>
+      <p>
+        Full publications will be added here as the discipline is developed and formalised.
       </p>
     </div>
   </main>
