--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -690,7 +690,7 @@
       <p><strong>2. AI Discoverability</strong></p>
       <p>
         <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify,
-        understand, and represent an entity when people ask about it.
+        understand, and represent you or your business when people ask about it.
       </p>
       <p>Key requirements include:</p>
       <ul>
