Updated canonical AI Discoverability definitions site-wide

--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -98,7 +98,7 @@
     <section class="definitions" aria-label="Canonical definitions">
       <h2>Canonical Definitions</h2>
       <p><strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, and ideas.</p>
-      <p><strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it.</p>
+      <p><strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</p>
       <p><strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured, 0–100 assessment that measures how clearly AI systems understand and surface an entity.</p>
       <p><strong>Entity Understanding Layer™ (EUL)</strong> is a conceptual model describing the observable patterns by which AI systems appear to identify, organise, and update their internal representations of entities.</p>
       <p><strong>Presence Stack™</strong> is a layered model describing the sources of information that influence how AI systems perceive and represent an entity.</p>
@@ -690,7 +690,7 @@
       <p><strong>2. AI Discoverability</strong></p>
       <p>
         <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify,
-        understand, and represent you or your business when people ask about it.
+        understand, and represent people, organisations, relationships, and ideas
       </p>
       <p>Key requirements include:</p>
       <ul>
