--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas."
     },
     "publisher": {
       "@type": "Organization",
@@ -67,7 +67,7 @@
 
       <p>
         <strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify,
-        understand, and represent you or your business when people ask about it.
+        understand, and represent people, organisations, relationships, and ideas.
       </p>
 
       <p>
