--- a/lexicon.html
+++ b/lexicon.html
@@ -30,7 +30,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Discoverability",
-      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it."
+      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas."
     },
     "publisher": {
       "@type": "Organization",
@@ -65,7 +65,7 @@
       <dl>
         <dt>AI Discoverability</dt>
         <dd>
-          AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent you or your business when people ask about it.
+          AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.
         </dd>
 
         <dt>Machine-Legibility</dt>
