updated ai perception definition

--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -68,7 +68,7 @@
       {
         "@type": "Thing",
         "name": "AI Perception",
-        "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, and ideas."
+        "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
       },
       {
         "@type": "Thing",
@@ -97,7 +97,7 @@
     <!-- Canonical Definitions (Anchors) -->
     <section class="definitions" aria-label="Canonical definitions">
       <h2>Canonical Definitions</h2>
-      <p><strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, and ideas.</p>
+      <p><strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relastionships, and ideas.</p>
       <p><strong>AI Discoverability</strong> is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</p>
       <p><strong>EntityWorks Discoverability Index™ (EDI)</strong> is a structured, 0–100 assessment that measures how clearly AI systems understand and surface an entity.</p>
       <p><strong>Entity Understanding Layer™ (EUL)</strong> is a conceptual model describing the observable patterns by which AI systems appear to identify, organise, and update their internal representations of entities.</p>
@@ -146,7 +146,7 @@
       <p><strong>3. What AI Systems Actually Do</strong></p>
       <ul>
         <li>AI systems ingest information from multiple sources.</li>
-        <li>They form internal representations of people, organisations, and ideas.</li>
+        <li>They form internal representations of people, organisations, relastionships, and ideas.</li>
         <li>They update these representations as new information appears.</li>
         <li>They express these representations when users ask questions.</li>
       </ul>
@@ -673,7 +673,7 @@
       <p><strong>1. AI Perception</strong></p>
       <p>
         <strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their
-        understanding of people, organisations, and ideas.
+        understanding of people, organisations, relationships, and ideas.
       </p>
       <p>Key concepts include:</p>
       <ul>
