--- a/ai-perception.html
+++ b/ai-perception.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="A placeholder for EntityWorks’ upcoming work on AI Perception — the broader discipline that explains how AI systems form, update, and express their understanding of people, organisations, and ideas.">
+        content="A placeholder for EntityWorks’ upcoming work on AI Perception — the broader discipline that explains how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.">
   <link rel="canonical" href="https://entityworks.ai/ai-perception.html">
 
   <style>
@@ -31,7 +31,7 @@
     "about": {
       "@type": "Thing",
       "name": "AI Perception",
-      "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, and ideas."
+      "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships and ideas."
     },
     "publisher": {
       "@type": "Organization",
@@ -51,7 +51,7 @@
     <div class="placeholder">
       <p>
         <strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their
-        understanding of people, organisations, and ideas.
+        understanding of people, organisations, relationships, and ideas.
       </p>
       <p>
         This page will become the central hub for EntityWorks’ work on AI Perception — the overarching discipline that
