Updated positioning statement

--- a/why-entityworks-exists.html
+++ b/why-entityworks-exists.html
@@ -105,15 +105,9 @@
 </div>
 
 <main>
-  <p>
-    Over recent months, I have spent a considerable amount of time exploring what the industry currently means when it
-    refers to “AI discoverability.” What became clear during this research is that there is no consistent definition, no
-    shared principle, and no recognised standard for how organisations should be represented or understood by AI systems.
-    The term is used loosely, often without structure or precision. After speaking with practitioners, reviewing existing
-    references, and examining how AI systems interpret organisations today, it became evident that the field lacks a coherent
-    foundation. This realisation — that organisations are increasingly mediated by AI systems without any guiding framework
-    for how they appear within them — is what led to the creation of EntityWorks.
-  </p>
+<p>
+  While exploring how AI systems form their understanding of organisations, it became clear that the industry had no discipline governing this process at all. “AI discoverability” was being used informally, without definition, structure, or standards — and AI models were left to interpret entities without any coherent framework. What I found was not a vague or emerging field, but a void: a missing discipline at the very moment the world was beginning to depend on it. EntityWorks was created to define that discipline, establish the structures AI systems need to understand the world, and build the perceptual infrastructure that modern AI will rely on going forward.
+</p>
 
   <h2>1. An Emerging Interpretive Shift</h2>
   <p>
