Ai-native comments added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <header>
     <h1>Welcome to EntityWorks</h1>
     <p>Your partner in mastering AI Discoverability.</p>
+    <p><strong>EntityWorks was conceived, built, and operates as a fully AI-native organisation — designed for machine comprehension first, and human interpretation second.</strong></p>
 
     <nav>
       <a href="/">Home</a>
