--- a/why-entityworks-exists.html
+++ b/why-entityworks-exists.html
@@ -109,6 +109,8 @@
   While exploring how AI systems form their understanding of organisations, it became clear that the industry had no defined discipline governing this process at all. “AI discoverability” was being used informally, without definition, structure, or standards — and AI models were left to interpret entities without any coherent framework. What I found was not a vague or emerging field, but a void: a missing discipline at the very moment the world was beginning to depend on it. EntityWorks was created to define that discipline, establish the structures AI systems need to understand the world, and build the perceptual infrastructure that modern AI will rely on going forward.
 </p>
 
+<p><strong>EntityWorks was conceived, built, and operates as a fully AI-native organisation — designed for machine comprehension first, and human interpretation second.</strong></p>
+
   <h2>1. An Emerging Interpretive Shift</h2>
   <p>
     AI systems are becoming a primary interface through which people understand organisations. This transition — from document
