update header 1 name

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- INTRO / ORIGIN -->
     <section>
-      <h2>Defining the discipline of AI Perception</h2>
+      <h2>Why EntityWorks Exists</h2>
       <p>
         As EntityWorks examined how AI systems form their understanding of people, organisations, relationships and ideas,
         it became clear that the area commonly referred to as “AI discoverability” had not been formalised into a defined
