--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- INTRO / ORIGIN -->
     <section>
-      <h2>Why EntityWorks Exists</h2>
+      <h2>2025 - The Birth of the AI-Native Company</h2>
       <p>
         As EntityWorks examined how AI systems form their understanding of people, organisations, relationships and ideas,
         it became clear that the area commonly referred to as “AI discoverability” had not been formalised into a defined
