--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EntityWorks — AI Discoverability</title>
+  <title>EntityWorks — AI Perception & AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="EntityWorks develops the frameworks, language, and standards behind AI Discoverability, including the EntityWorks Discoverability Index™, helping organisations navigate visibility in the AI era.">
+        content="EntityWorks defines the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -75,14 +75,21 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "EntityWorks — AI Discoverability",
-    "description": "EntityWorks develops the frameworks, language, and standards behind AI Discoverability, including the EntityWorks Discoverability Index™, helping organisations navigate visibility in the AI era.",
+    "name": "EntityWorks — AI Perception & AI Discoverability",
+    "description": "EntityWorks defines the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
     "url": "https://entityworks.ai/",
-    "about": {
-      "@type": "Thing",
-      "name": "AI Discoverability",
-      "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas."
-    },
+    "about": [
+      {
+        "@type": "Thing",
+        "name": "AI Perception",
+        "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
+      },
+      {
+        "@type": "Thing",
+        "name": "AI Discoverability",
+        "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, and ideas."
+      }
+    ],
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks"
@@ -132,7 +139,7 @@
       <h2>AI Perception: How AI Systems Understand the World</h2>
 
       <p>
-        <strong>AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of entities.</strong>
+        <strong>AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.</strong>
       </p>
 
       <p>
@@ -153,8 +160,7 @@
       <h2>AI Discoverability: Making Entities Legible to AI Systems</h2>
 
       <p>
-        <strong>AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and
-        represent people, organisations, relationships and ideas.</strong>
+        <strong>AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</strong>
       </p>
 
       <p>
