Update to tone and purpose

--- a/ai-perception.html
+++ b/ai-perception.html
@@ -6,19 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="A placeholder for EntityWorks’ upcoming work on AI Perception — the broader discipline that explains how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.">
+        content="EntityWorks defines the discipline of AI Perception — how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.">
   <link rel="canonical" href="https://entityworks.ai/ai-perception.html">
 
   <style>
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-           line-height: 1.6; margin: 2rem auto; max-width: 800px; padding: 0 1rem; color: #111; }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a { margin-right: 1rem; font-size: 0.95rem; text-decoration: none; color: #0057ff; }
-    nav a:hover { text-decoration: underline; }
-    h2 { margin-top: 1.75rem; }
-    .placeholder { background: #f5f7ff; border-left: 3px solid #0057ff;
-                   padding: 1rem; margin-top: 2rem; }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
+      margin: 2rem auto;
+      max-width: 800px;
+      padding: 0 1rem;
+      color: #111;
+    }
+    header, footer {
+      margin-bottom: 2rem;
+    }
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 0.25rem;
+    }
+    nav a {
+      margin-right: 1rem;
+      font-size: 0.95rem;
+      text-decoration: none;
+      color: #0057ff;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    h2 {
+      margin-top: 1.75rem;
+    }
+    .placeholder {
+      background: #f5f7ff;
+      border-left: 3px solid #0057ff;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+      padding: 0;
+    }
+    li {
+      margin: 0.25rem 0;
+    }
   </style>
 
   <script type="application/ld+json">
@@ -26,12 +57,12 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "AI Perception",
-    "description": "Placeholder page for upcoming EntityWorks publications defining and developing the discipline of AI Perception.",
+    "description": "EntityWorks defines the discipline of AI Perception — how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.",
     "url": "https://entityworks.ai/ai-perception.html",
     "about": {
       "@type": "Thing",
       "name": "AI Perception",
-      "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships and ideas."
+      "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
     },
     "publisher": {
       "@type": "Organization",
@@ -44,25 +75,80 @@
 <body>
   <header>
     <h1>AI Perception</h1>
-    <p>The broader discipline that explains how AI systems interpret and represent the world.</p>
+    <p>The discipline that explains how AI systems form, update, and express their understanding of the world.</p>
   </header>
 
   <main>
     <div class="placeholder">
       <p>
-        <strong>AI Perception</strong> is the discipline concerned with how AI systems form, update, and express their
-        understanding of people, organisations, relationships, and ideas.
+        <strong>AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.</strong>
       </p>
       <p>
-        This page will become the central hub for EntityWorks’ work on AI Perception — the overarching discipline that
-        sits above AI Discoverability. It will introduce the principles, models, and frameworks that describe how AI
-        systems build and update their internal representations, and how that perception shapes what people see in
-        AI-generated answers.
-      </p>
-      <p>
-        Full publications will be added here as the discipline is developed and formalised.
+        It focuses on the internal representations that modern AI systems create — the way entities are modelled,
+        connected, and updated over time. AI Perception sits above applied areas such as AI Discoverability and provides
+        the conceptual structure for understanding how AI systems “see” and describe people, organisations, products, and
+        relationships.
       </p>
     </div>
+
+    <section>
+      <h2>What AI Perception Covers</h2>
+      <p>
+        As AI systems move beyond simple document retrieval, they increasingly operate at the level of entities and
+        relationships. AI Perception examines questions such as:
+      </p>
+      <ul>
+        <li>how AI systems construct and store their internal understanding of entities</li>
+        <li>how new information changes those internal representations over time</li>
+        <li>which signals models treat as reliable when updating their view</li>
+        <li>how different AI systems can diverge in their perception of the same entity</li>
+        <li>how those internal views are expressed back to people in answers, summaries, or recommendations</li>
+      </ul>
+      <p>
+        By treating perception as a discipline, EntityWorks aims to bring structure to how these questions are asked and
+        answered — so that AI systems can form more stable, accurate, and interpretable understandings of the entities
+        they describe.
+      </p>
+    </section>
+
+    <section>
+      <h2>AI Perception and AI Discoverability</h2>
+      <p>
+        Within this broader discipline, <strong>AI Discoverability</strong> addresses a specific applied question:
+      </p>
+      <p>
+        <strong>AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</strong>
+      </p>
+      <p>
+        While AI Perception is concerned with how AI systems form and update their understanding internally, AI
+        Discoverability focuses on whether those systems are given the right conditions — clarity, consistency, structure
+        and alignment of signals — to form that understanding in the first place.
+      </p>
+      <p>
+        You can read more about how EntityWorks has formalised AI Discoverability as an applied discipline in
+        <a href="/defining-ai-discoverability.html">AI Discoverability: Defining the Discipline</a>.
+      </p>
+    </section>
+
+    <section>
+      <h2>EntityWorks’ Role in AI Perception</h2>
+      <p>
+        EntityWorks approaches AI Perception as a structural discipline. The work includes:
+      </p>
+      <ul>
+        <li>defining the core concepts and language of AI Perception</li>
+        <li>mapping how AI systems build and update their internal views of entities</li>
+        <li>formalising AI Discoverability as a subdiscipline concerned with legibility to AI systems</li>
+        <li>developing the EntityWorks Discoverability Index™ as a measurable lens on AI-facing representation</li>
+        <li>introducing the Entity Understanding Layer™ as a way to describe the structures AI rely on to interpret entities</li>
+        <li>publishing machine-readable frameworks that help align human intentions with AI interpretations</li>
+      </ul>
+      <p>
+        Over time, this page will serve as the hub for EntityWorks’ publications on AI Perception — connecting the
+        underlying theory, the applied disciplines that sit beneath it, and the standards that support AI-era
+        interpretation in practice.
+      </p>
+    </section>
   </main>
 
   <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
